Fixed Div Readability

--- a/Baby'sFirstWebpage.css
+++ b/Baby'sFirstWebpage.css
@@ -3,6 +3,55 @@ body{
     margin: 0;
     background-color:rgb(236, 236, 236);
 }
+.flip-site{
+background-color: pink;
+width: 100%;
+height: 1080px;
+perspective: 1000px;
+}
+.flip-site-inner{
+position: relative;
+text-align: center;
+background-size: cover;
+width: 100%;
+height: 100%;
+transition: transform 0.8s;
+transform-style: preserve-3d;
+}
+
+.flip-site-front, .flip-site-back{
+position: absolute;
+width: 100%;
+height: 100%;
+backface-visibility: hidden;
+}
+.flip-site-front{
+    display: flex;
+    background-size: cover;
+    background-image: url('Assets/Minimalist Color Palette.jpg');
+}
+.flip-site-prompt{
+    align-self: center;
+    font-size: 5em;
+    font-weight: 500;
+    padding: 40px;
+    background-color: transparent;
+    border: 2px solid #111;
+}
+.flip-site-prompt:hover .flip-site-inner{
+transform: rotateY(180deg);
+}
+.flip-site-back{
+    transform: rotateY(180deg);
+}
+.parallaxBackgroundImage{
+    background-image: url('Assets/Minimalist\ Planets.jpg');
+    min-height: 2480px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .navbar ul {
     font-family: 'Courier New', Courier, monospace;
     list-style-type: none;
@@ -85,13 +134,24 @@ body{
 }
 .fakeimg{
  background-color: #aaa;
- width: 95%;
+ width: 90%;
  padding: 20px 20px 20px 10px;
+}
+.cardBackgroundImage{
+    
 }
 .card{
     background-color: white;
     padding: 20px;
-    margin-top: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.cardTitle{
+
+}
+.cardDescription{
+
 }
 .row::after{
     content: "";
